--- a/get data.html
+++ b/get data.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 
-<p id="demo"></p>
+<p id="getdata"></p>
 
 <script>
 var w = window.innerWidth;
 var h = window.innerHeight;
 
-var x = document.getElementById("demo");
+var x = document.getElementById("getdata");
 x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
 </script>
 
