--- a/get data.html
+++ b/get data.html
@@ -11,8 +11,7 @@
 var w = window.innerWidth;
 var h = window.innerHeight;
 
-var x = document.getElementById("getdata");
-x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+var x = document.getElementById("getdata").innerHTML = "Browser width: " + w + ", height: " + h + ".";
 </script>
 
 </body>
